# Merlin

./: .coverage  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rgignore  AB_TESTING_COMPLETE.md  ADAPTIVE_IMPLEMENTATION_SUMMARY.md  ADAPTIVE_LLM_README.md  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  COST_OPTIMIZATION_COMPLETE.md  Creating Jarvis powered by OpenAI and Python _ ChatGPT - YouTube.url  CUsersaarogAppDataLocalTemppytest-of-aarogpytest-901test_agent_protocol_startup_ha0governance_guardrails_status.json  CUsersaarogAppDataLocalTemppytest-of-aarogpytest-902test_agent_protocol_startup_ha0governance_guardrails_status.json  CUsersaarogAppDataLocalTemppytest-of-aarogpytest-915test_agent_protocol_startup_ha0governance_guardrails_status.json  CUsersaarogAppDataLocalTemppytest-of-aarogpytest-924test_agent_protocol_startup_ha0governance_guardrails_status.json  CUsersaarogAppDataLocalTemppytest-of-aarogpytest-925test_agent_protocol_startup_ha0governance_guardrails_status.json  CUsersaarogAppDataLocalTemppytest-of-aarogpytest-928test_agent_protocol_startup_ha0governance_guardrails_status.json  CUsersaarogAppDataLocalTemppytest-of-aarogpytest-929test_agent_protocol_startup_ha0governance_guardrails_status.json  CUsersaarogAppDataLocalTemppytest-of-aarogpytest-930test_agent_protocol_startup_ha0governance_guardrails_status.json  CUsersaarogAppDataLocalTemppytest-of-aarogpytest-931test_agent_protocol_startup_ha0governance_guardrails_status.json  Dockerfile  How I Built JARVIS with No Code (Tutorial w_ Lovable, ElevenLabs, n8n) - YouTube.url  (+144 more)
(+524 files in other folders)
